# ROS2-Navigation-mit-LIMO-Cobot

./: Dokumentation-AgileXLimo-EIABtsystems.docx  PLAN_autonomes_greifen.md  PLAN_betreuer.md  pickplace_navigator.py  waypoint_navigator.py
limo_waypoints/: package.xml  pick_place_usecase_todo.md  setup.py  todo.md
limo_waypoints/Anleitungen/: add_new_node.md  automatisches_greifen_ohne_feste_position.md  installation_ros2.md  mapping_cartographer.md  object_detection_follow.md  object_detection_follow_gripper.md  object_detection_general.md  object_detection_limo.md
limo_waypoints/Anleitungen/Konsolenausgabe_Screenshots/: limo_bringup-limo_nav2launchpy.txt  limo_bringup-limo_startpy.txt
limo_waypoints/Anleitungen/code_erklärungen/: yolo_baustein_follow_erklaerung.md
limo_waypoints/Anleitungen/navigation_guide/: mapping_cartographer.md  navigation_guide.md  waypoints_guide.md
limo_waypoints/Anleitungen/object_detection_guide/: object_detection_follow.md  object_detection_follow_depth.md  (+4 more)
limo_waypoints/limo_mycobot/: baustein_auto_grabber.py  get_angles.py  keyboard_control.py  move_arm.py  mycobot_gripper_node.py  standing_pick.py  test_gripper.py  test_port.py
limo_waypoints/limo_navigation/: auto_pick_orchestrator.py  drive_2m_simple.py  drive_2m_simple_ros1.py  turn_right_90_odom_ros1.py  turn_right_90_ros1.py  waypoint_navigator.py
limo_waypoints/limo_object_detection/: yolo_baustein_follow.py  yolo_baustein_follow_depth.py  yolo_baustein_publisher.py  yolo_baustein_stop.py  yolo_limo_view.py
limo_waypoints/navigation/: pickplace_navigator
(+11 files in other folders)
