<?xml version="1.0"?>
<package format="3">
  <name>limo_waypoints</name>
  <version>0.0.0</version>
  <description>Waypoint navigation for LIMO with Nav2</description>

  <maintainer email="agilex@example.com">agilex</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>nav2_simple_commander</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>